removing ! char and put in my name as uppercase at the first char

--- a/mySelf.html
+++ b/mySelf.html
@@ -8,7 +8,7 @@
         <font>
         <p align="center">
             <img class="spotlight" alt="תמונה יכולה לכלול: &rlm;אדם אחד&rlm;" src="./avatar.png" aria-busy="true">
-            <h3 id="name">Hi! my name is tzipora yehezkel</h3>
+            <h3 id="name">Hi my name is Tzipora Yehezkel</h3>
             <h4 id="ntmu"> Nice to meet you :) </h4>
             <div class="center fontSizeSmall">
                 About Me <br>
