--- a/mySelf.html
+++ b/mySelf.html
@@ -2,9 +2,9 @@
 <html>
     <head>
          <link rel="stylesheet" href="./mySelf.css">
+        <title>Hi all</title>
     </head>
     <body bgcolor="#FFFFFF">
-    <h1>
         <font>
         <p align="center">
             <img class="spotlight" alt="תמונה יכולה לכלול: &rlm;אדם אחד&rlm;" src="./avatar.png" aria-busy="true">
@@ -16,8 +16,23 @@ I live in Ramat Gan. 25 years old, married to Oz Yehezkel.<br> I have 2 sons, th
 I am an information systems management student at the Academic Center. <br>
 And for the past three years I have been working as an IRA reporter at Meitav Dash Investment House.
             </div>
+            <div>
+                <table>
+  <tr>
+    <th>Lovely URL</th>
+  </tr>
+  <tr>
+    <td><a href="https://www.youtube.com/watch?v=KvRVky0r7YM&ab_channel=TheGrandSound">Progressive House</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://www.youtube.com/watch?v=5ejT8FqglLM&ab_channel=%D7%A2%D7%99%D7%93%D7%9F%D7%A8%D7%A4%D7%90%D7%9C%D7%97%D7%91%D7%99%D7%91-IdanRafaelHaviv">IdanRafaelHaviv</a></td>
+  </tr>
+                    <tr>
+    <td><a href="https://www.youtube.com/watch?v=Mj2XWQRXqoo&ab_channel=%D7%A8%D7%95%D7%AA%D7%9D%D7%9B%D7%94%D7%9FRotemcohen">Rotemcohen</a></td>
+  </tr>
+</table>
+            </div>
         </p>
         </font>
-    </h1>
     </body>
 </html>
