remove unuse tags

--- a/mySelf.html
+++ b/mySelf.html
@@ -2,10 +2,9 @@
 <html>
     <head>
          <link rel="stylesheet" href="./mySelf.css">
-        <title>Hi all</title>
+        <title>Tzipora Yehezkel</title>
     </head>
-    <body bgcolor="#FFFFFF">
-        <font>
+    <body>
         <p align="center">
             <img class="spotlight" alt="תמונה יכולה לכלול: &rlm;אדם אחד&rlm;" src="./avatar.png" aria-busy="true">
             <h3 id="name">Hi my name is Tzipora Yehezkel</h3>
@@ -33,6 +32,5 @@ And for the past three years I have been working as an IRA reporter at Meitav Da
 </table>
             </div>
         </p>
-        </font>
     </body>
 </html>
