fix texts + add new texts

--- a/mySelf.html
+++ b/mySelf.html
@@ -12,8 +12,8 @@
             <div class="center fontSizeSmall">
                 About Me <br>
 I live in Ramat Gan. 25 years old, married to Oz Yehezkel.<br> I have 2 sons, the older one is called Aviel and he is 5 years old and the youngest is called Lavi and he is 3 years old. <br>
-I am an information systems management student at the Academic Center. <br>
-And for the past three years I have been working as an IRA reporter at Meitav Dash Investment House.
+I am an information systems management student at the Academic Center , Ramat Gan. <br>
+And for the past three years I have been working as an IRA referent at Meitav Dash Investment House.
             </div>
             <div>
                 <table>
