--- a/mySelf.html
+++ b/mySelf.html
@@ -5,10 +5,15 @@
         <title>Tzipora Yehezkel</title>
     </head>
     <body>
+    <!--1 element-->
         <p align="center">
+            <!--2 element-->
             <img class="spotlight" alt="תמונה יכולה לכלול: &rlm;אדם אחד&rlm;" src="./avatar.png" aria-busy="true">
+           <!--3 element-->
             <h3 id="name">Hi my name is Tzipora Yehezkel</h3>
+           <!--4 element-->
             <h4 id="ntmu"> Nice to meet you :) </h4>
+           <!--5 element-->
             <div class="center fontSizeSmall">
                 About Me <br>
 I live in Ramat Gan. 25 years old, married to Oz Yehezkel.<br> I have 2 sons, the older one is called Aviel and he is 5 years old and the youngest is called Lavi and he is 3 years old. <br>
@@ -16,12 +21,10 @@ I am an information systems management student at the Academic Center , Ramat Ga
 And for the past three years I have been working as an IRA referent at Meitav Dash Investment House.
             </div>
             <div>
+                <!--6 element-->
                 <table>
   <tr>
     <th>Lovely URL</th>
-  </tr>
-  <tr>
-    <td><a href="https://www.youtube.com/watch?v=KvRVky0r7YM&ab_channel=TheGrandSound">Progressive House</a></td>
   </tr>
   <tr>
     <td><a href="https://www.youtube.com/watch?v=5ejT8FqglLM&ab_channel=%D7%A2%D7%99%D7%93%D7%9F%D7%A8%D7%A4%D7%90%D7%9C%D7%97%D7%91%D7%99%D7%91-IdanRafaelHaviv">IdanRafaelHaviv</a></td>
